PWGPP-485 - prototyping interactive widgets ### main class TTreeHnBrowser * class TSliderArray * class TTreeHnBrowser

--- a/TFnInteractive/TestIPwidget.ipynb
+++ b/TFnInteractive/TestIPwidget.ipynb
@@ -4,13 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examples from: \n",
+    "# Jupyter interactive widgets\n",
+    "* Sophisicated demo presented during the ROOT workshop  by Sylvain Corlay\n",
+    "  * https://www.youtube.com/watch?v=eVET9IYgbao (see e.g minute 25)\n",
+    "  * some link https://www.youtube.com/watch?v=nRmkS_6ngCU\n",
+    "* Interactive jupyter notebooks\n",
+    "* C++ implementation exist but not yet reeady to be used with root C++\n",
+    "* For the moment python ipywidgets exercised\n",
+    "## Examples widgets: \n",
     "https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +27,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def f(x):\n",
-    "    return x"
+    "### User defined callback function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    return x*x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Widgets with callback functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37e44b9877b24dfeb809e409629a8a0d",
+       "model_id": "cb2a2c7d325b490d9760f88da63510be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5a886d43a0c4bc98354d1584d36e492",
+       "model_id": "84ac49148bba4be09712304f48b3fe34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f9ca0415d914bb68e2a4dc72ec11920",
+       "model_id": "5c764a92166a4ba49c070f8b2bfc5fa9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b06c3f9b862f43d4b9015adb98e0bccf",
+       "model_id": "c9667859570f4cc5a8fe4585a2b0ae00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afe4b3a80f944aef9729448d8ebea62d",
+       "model_id": "0748e6f4189945038a2753a1457ca23c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "167566abeafc4b11b7d9014bc5200b48",
+       "model_id": "8f1b2c28da274a2897a3a3888c677ef3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d2c7e14ebe24365aa9d5cb8b0c7f18e",
+       "model_id": "41d857fdeb494553b4159c85c966bb06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,14 +270,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom interactive plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63aadfacbb6e4058beadeb5fb98f7eb8",
+       "model_id": "de52bca719be4de2adf69ea5425a866a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +323,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13cbe82bbc444d499e37693b2fdd052a",
+       "model_id": "aa03f4d4aaf74f5f88fbfe40ae67c929",
        "version_major": 2,
        "version_minor": 0
       },
@@ -309,7 +337,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d37ff9046074452adf490dd3c1f6e8a",
+       "model_id": "a2ace14d256942b0a916a275a5b2b8dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b1939aa66c84bc7a94459e0e93506cb",
+       "model_id": "aae59ead654b42ad80432c10fe3faee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fdf9729fade4312a11f7beedfc1caea",
+       "model_id": "7754e155cea2410e8de47a6c9f0c142f",
        "version_major": 2,
        "version_minor": 0
       },
