PWGPP-485 - bug fix in TSliderArray * box closing not enough. removing box from tupe

--- a/TTreeHnInteractive/TTreeHnInteractive_v2.ipynb
+++ b/TTreeHnInteractive/TTreeHnInteractive_v2.ipynb
@@ -34,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to JupyROOT 6.13/03\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "494ad196232a45d196ea78c50205e274",
+       "model_id": "755b5c897cc7481faf767a52d8821076",
        "version_major": 2,
        "version_minor": 0
       },
