--- a/TTreeHnInteractive/TestSliderArray.ipynb
+++ b/TTreeHnInteractive/TestSliderArray.ipynb
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65234f5dad5c4536959a7e9e0028e33d",
+       "model_id": "36cc26e2cc1a4f6f89e5741e3dad852d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oRmxvYXRSYW5nZVNsaWRlcih2YWx1ZT0oMS41LCAxLjc1KSwgZGVzY3JpcHRpb249dSd4MSgxOjI6MC4xOjEuNToxLjc1KScsIGxheW91dD3igKY=\n"
+       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oRmxvYXRSYW5nZVNsaWRlcih2YWx1ZT0oMTEwLjAsIDE4MC4wKSwgZGVzY3JpcHRpb249dSd4NCgxMDA6MjAwOjAuMToxMTA6MTgwKScsIGzigKY=\n"
       ]
      },
      "metadata": {},
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(HBox(children=(FloatRangeSlider(value=(1.5, 1.75), description=u'x1(1:2:0.1:1.5:1.75)', layout=Layout(width=u'66%'), max=2.0, min=1.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(FloatRangeSlider(value=(110.0, 180.0), description=u'x4(100:200:0.1:110:180)', layout=Layout(width=u'66%'), max=200.0, min=100.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(FloatRangeSlider(value=(110.0, 180.0), description=u'x4(100:200:0.1:110:180)', layout=Layout(width=u'66%'), max=200.0, min=100.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')))\n"
+      "(HBox(children=(FloatRangeSlider(value=(1.5, 1.75), description=u'x1(1:2:0.1:1.5:1.75)', layout=Layout(width=u'66%'), max=2.0, min=1.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(FloatRangeSlider(value=(10.0, 20.0), description=u'x2(10:20:1)', layout=Layout(width=u'66%'), max=20.0, min=10.0, step=1.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(FloatRangeSlider(value=(110.0, 180.0), description=u'x3(100:200:0.1:110:180)', layout=Layout(width=u'66%'), max=200.0, min=100.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')), HBox(children=(FloatRangeSlider(value=(110.0, 180.0), description=u'x4(100:200:0.1:110:180)', layout=Layout(width=u'66%'), max=200.0, min=100.0), ToggleButton(value=False, description=u'Status', tooltip=u'Enable/disable'), Button(description=u'Remove', style=ButtonStyle(), tooltip=u'Remove slider')), layout=Layout(width=u'100%')))\n"
      ]
     }
    ],
