macro to extract input distortion data ROOT tree -> csv file

--- a/QuantileRegression/QuantilRegressionForest.ipynb
+++ b/QuantileRegression/QuantilRegressionForest.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "boston = load_boston()\n",
     "X, y = boston.data, boston.target\n",
     "kf = KFold(n_splits=5, random_state=0)\n",
-    "rfqr = RandomForestQuantileRegressor(\n",
-    "    random_state=0, min_samples_split=10, n_estimators=1000)"
+    "rfqr = RandomForestQuantileRegressor(random_state=0, min_samples_split=10, n_estimators=1000)"
    ]
   },
   {
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +123,46 @@
     "plt.ylabel(\"Values and prediction intervals.\")\n",
     "plt.xlim([0, 500])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(506, 13)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(506,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
    ]
   },
   {
