PWGPP-485 - adding bokeh tools

--- a/TTreeHnInteractive/V0_RandomForestWithErr.ipynb
+++ b/TTreeHnInteractive/V0_RandomForestWithErr.ipynb
@@ -27,7 +27,7 @@
     "import sklearn.model_selection as xval\n",
     "from sklearn.datasets.mldata import fetch_mldata\n",
     "import forestci as fci\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
