New format for tab and accordion options are implemented

--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -55,6 +55,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Bokeh draw directly from the tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA\"\n",
+    "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
+    "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
+    "slider=\"accordion#first(slider#commonF(0,15,5,0,5)):accordion#second(dropdown#MB(0,0.5,1)):accordion#first(slider#P0(0,1,0.5,0,1)):accordion#second(checkbox#isMax):slider#typeF(0,4,1,0)\"\n",
+    "xxx=bokehDraw(tree,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips,variables=variables)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Convert selected varaibles from tree to panda and draw"
    ]
   },
@@ -67,26 +87,8 @@
     "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA\"\n",
     "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
     "#slider=\"commonF(0,15,5,0,0)\"\n",
-    "slider=\"slider#commonF(0,15,5,0,5):dropdown#MB(0,0.5,1):slider#P0(0,1,0.5,0,1):checkbox#isMax:slider#typeF(0,4,1,0)\"\n",
+    "slider=\"tab#first(slider#commonF(0,15,5,0,5)):tab#second(dropdown#MB(0,0.5,1)):tab#first(slider#P0(0,1,0.5,0,1)):tab#second(checkbox#isMax):slider#typeF(0,4,1,0)\"\n",
     "bokehDraw(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=6,ncols=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bokeh draw directly from the tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
-    "p3 = figure(plot_width=700, plot_height=400, title=\"template\")\n",
-    "xxx=bokehDraw(tree,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips,variables=variables)"
    ]
   },
   {
