PWGPP-485 - CLIon syntax error removal

--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -94,11 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA\"\n",
+    "variables=\"pileUp:tailF:commonF:typeF:fraction:param.fElements[1]:norm:slope:isMax:MB:P0:P1:PA:isMaxTot\"\n",
     "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
-    "#slider=\"commonF(0,15,5,0,0)\"\n",
-    "slider=\"tab.first(slider.commonF(0,15,5,0,5)),tab.second(dropdown.MB(0,0.5,1)),accordion.first(slider.P0(0,1,0.5,0,1)),accordion.second(checkbox.isMax),slider.typeF(0,4,1,0)\"\n",
-    "bokeh=bokehDraw(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=6,ncols=1)"
+    "#widgets=\"tab.first(slider.commonF(0,15,5,0,5)),tab.second(dropdown.MB(0,0.5,1)),accordion.first(slider.P0(0,1,0.5,0,1)),accordion.second(checkbox.isMax),slider.typeF(0,4,1,0)\"\n",
+    "widgets=\"tab.sliders(slider.commonF(0,15,5,0,5),slider.fraction(0,100,4,0,100)),\"\n",
+    "widgets+=\"tab.options(checkbox.P0(),checkbox.P1(),checkbox.isMax(), checkbox.isMaxTot(), checkbox.MB(), checkbox.pileUp()))\"\n",
+    "bokeh=bokehDraw(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
    ]
   },
   {
@@ -132,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pixiedebug\n",
-    "bokehDraw(tree,\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",slider,p3,commonX=1,size=8,ncols=1,nEntries=100000000,tooltips=tooltips)"
+    "# %pixiedebug\n",
+    "#bokeh=bokehDraw(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
    ]
   },
   {
