RootInteractiveTest link added

--- a/tutorial/Index.ipynb
+++ b/tutorial/Index.ipynb
@@ -25,11 +25,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For more examples see experimental project: [RootInteractiveTest](../RootInteractiveTest/Index.ipynb)\n",
+    "\n",
+    "If it is not installed you can install it:\n",
+    "\n",
+    "    git clone https://github.com/miranov25/RootInteractiveTest.git"
+   ]
   }
  ],
  "metadata": {
