RootInteractiveTest link added

--- a/tutorial/Index.ipynb
+++ b/tutorial/Index.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more examples see experimental project: [RootInteractiveTest](../RootInteractiveTest/Index.ipynb)\n",
+    "For more examples see experimental project: [RootInteractiveTest](../../RootInteractiveTest/Index.ipynb)\n",
     "\n",
     "If it is not installed you can install it:\n",
     "\n",
