Bokeh histogram draw is implemented

--- a/tutorial/Index.ipynb
+++ b/tutorial/Index.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "source": [
     "Currently runing examples:\n",
-    "1. [bokehDraw](bokehDraw/bokehTreeDraw.ipynb)\n",
-    "2. [Regresssion Forest](MLpipeline/plotRegressionForestError.ipynb)\n",
-    "3. [Quantile Regression forest](QuantileRegression/QuantilRegressionForest.ipynb)\n",
-    "\n",
-    "Examples waiting for data on webserver:\n",
-    "1. [Distortion Map](distortionCase/pandaTools/distortionDraw.ipynb)\n",
+    "1. [bokehTreeDraw](bokehDraw/bokehTreeDraw.ipynb)\n",
+    "2. [bokehHistoDraw](bokehDraw/THnInteractive.ipynb)\n",
+    "3. [bokehHistoDraw(R_Phi_Z_pT)](bokehDraw/THnVisualization.ipynb)\n",
+    "4. [Regresssion Forest](MLpipeline/plotRegressionForestError.ipynb)\n",
+    "5. [Quantile Regression forest](QuantileRegression/QuantilRegressionForest.ipynb)\n",
+    "6. [Distortion Map](distortionCase/pandaTools/distortionDraw.ipynb)\n",
     "\n",
     "Examples which are not working right now:\n",
     "1. [Distortion Check](QuantileRegression/distortionCase/distortionCheck0.ipynb)\n",
@@ -43,14 +43,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
