Class name is corrected

--- a/tutorial/bokehDraw/THnInteractive.ipynb
+++ b/tutorial/bokehDraw/THnInteractive.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drawHisto?"
+    "bokehDrawHistoTHn?"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "selection=\"hisdY(0),hisPullYLow(0),hisPullYHM1(0)\"\n",
-    "x=drawHisto(hisArray,selection,ncols=3);"
+    "x=bokehDrawHistoTHn(hisArray,selection,ncols=3);"
    ]
   }
  ],
