--- a/tutorial/bokehDraw/THnVisualization.ipynb
+++ b/tutorial/bokehDraw/THnVisualization.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "selection=\"merge(0),merge(1),merge(2),merge(3)\"\n",
-    "x=drawHisto(hisArray,selection,ncols=2);"
+    "x=bokehDrawHistoTHn(hisArray,selection,ncols=2);"
    ]
   }
  ],
