PWGPP-485, PWGPP-532 - make automatic test of the tutorial notebooks * only subset of notebooks for the moment

--- a/tutorial/bokehDraw/THnInteractive.ipynb
+++ b/tutorial/bokehDraw/THnInteractive.ipynb
@@ -31,7 +31,7 @@
     "ROOT.TFile.SetCacheFileDir(\"../data/\")\n",
     "f = ROOT.TFile.Open(\"http://rootinteractive.web.cern.ch/RootInteractive/testData/JIRA/PWGPP-485/hisPull.root\",\"cacheread\")\n",
     "hisArray  = f.Get(\"hisArray\")\n",
-    "hisArray.ls()"
+    "# hisArray.ls() - this line create problem for py.test"
    ]
   },
   {
@@ -52,6 +52,13 @@
     "selection=\"hisdY(0),hisPullYLow(0),hisPullYHM1(0)\"\n",
     "x=bokehDrawHistoTHn(hisArray,selection,ncols=3);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
