--- a/tutorial/bokehDraw/bokehTreeDraw.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDraw.ipynb
@@ -45,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ROOT.TFile.SetCacheFileDir(\"../data/\")\n",
     "tree=ROOT.AliTreePlayer.LoadTrees(\"cat performance.list\",\"identFit\",\"xxx\",\".*\",\"\",\"\")\n",
     "tree.SetAlias(\"norm\",\"param.fElements[0]\")\n",
     "tree.SetAlias(\"slope\",\"param.fElements[1]\")\n",
@@ -79,6 +80,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
+    "tooltips[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bokehDraw.verbosity=0\n",
     "variables=\"pileUp:tailF:commonF:typeF:fraction:norm:slope:isMax:MB:P0:P1:PA\"\n",
     "tooltips=[('Is maximum','@isMax'),(\"Pad type\",\"@typeF\")]\n",
@@ -93,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert selected varaibles from tree to panda and draw"
+    "# Convert selected variables from tree to panda and draw"
    ]
   },
   {
