PWGPP-543: Stand alone bokeh Tree draw [cannot show widgets]

--- a/tutorial/Index.ipynb
+++ b/tutorial/Index.ipynb
@@ -23,7 +23,7 @@
     "Examples which are not working right now:\n",
     "1. [Distortion Check](QuantileRegression/distortionCase/distortionCheck0.ipynb)\n",
     "2. [TTreeHnInteractive](TTreeHnInteractive/TTreeHNInteractiveV4.ipynb)\n",
-    "\n"
+    "3. [bokehTreeDrawStandAlone](bokehDraw/bokehTreeDrawSA.ipynb)\n"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
