--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -17,8 +17,9 @@
     "from bokeh.io import output_notebook, show, output_file\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.layouts import column, row\n",
-    "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
+    "from bokeh.models import CustomJS, ColumnDataSource\n",
+    "from bokeh.models.widgets import RangeSlider, Select, MultiSelect, CheckboxGroup,RadioButtonGroup\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
     "output_notebook()"
    ]
   },
@@ -30,6 +31,9 @@
    "source": [
     "#init test random data\n",
     "df = pd.DataFrame(np.random.randint(0, 100, size=(100, 4)), columns=list('ABCD'))\n",
+    "df[\"Category\"]=df.eval(\"A%5\")\n",
+    "df[\"Category2\"]=df.eval(\"A%10\")\n",
+    "df[\"Boolean\"]=df.eval(\"B%3==0\")\n",
     "df.head(10)\n",
     "df.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
     "print(df.metaData)"
@@ -41,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDrawArray?"
+    "df"
    ]
   },
   {
@@ -108,10 +112,22 @@
     "    sliders=[]\n",
     "    # 3.) create sliders \n",
     "    for a in df.columns:\n",
-    "        length=df[a].max()-df[a].min()\n",
-    "        sliderRange= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\".Range\")\n",
-    "        sliders.append([sliderRange])\n",
-    "        widgetDict[a+\".Range\"]=sliderRange\n",
+    "        if (a=='Category'):\n",
+    "            options = [str(x) for x in np.sort(df[a].unique()).tolist()]\n",
+    "            widget= Select(value=options[0], options=options,title=a)\n",
+    "            widget2=RadioButtonGroup(active=0, labels=options)\n",
+    "        elif (a=='Category2'):\n",
+    "            options = [str(x) for x in np.sort(df[a].unique()).tolist()]\n",
+    "            widget= MultiSelect(value=[], options=options,title=a)\n",
+    "        elif (a=='Boolean'):\n",
+    "            widget= CheckboxGroup(labels=[a],active=[])\n",
+    "        else:\n",
+    "            length=df[a].max()-df[a].min()\n",
+    "            widget= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\".Range\")\n",
+    "        sliders.append([widget])\n",
+    "        widgetDict[a+\".Range\"]=widget\n",
+    "    sliders.append([widget2])\n",
+    "    widgetDict[a+\".Range\"]=widget2\n",
     "    # make callback\n",
     "    callback=makeJScallback(widgetDict)\n",
     "    for a in sliders:\n",
@@ -125,23 +141,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "test_FigureArray()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -160,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
