PWGPP-543 - bokeh standalone JScalback update

--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh.io import output_notebook, show, output_file\n",
+    "from bokeh.io import output_notebook, show\n",
+    "#, output_file\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.layouts import column, row\n",
     "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
@@ -30,9 +31,10 @@
    "source": [
     "#init test random data\n",
     "df = pd.DataFrame(np.random.randint(0, 100, size=(100, 4)), columns=list('ABCD'))\n",
+    "df[\"Category\"]=df.eval(\"A%5\")\n",
     "df.head(10)\n",
     "df.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
-    "print(df.metaData)"
+    "#print(df.metaData)"
    ]
   },
   {
@@ -53,8 +55,9 @@
     "figureArray = [\n",
     "        [['A'], ['D+A','C-A'], {\"size\": 1}],\n",
     "        [['A'], ['C+A', 'C-A']],\n",
+    "        [['A'], ['Category']],\n",
     "    ]\n",
-    "figureLayout: str = '((0),(1, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
+    "figureLayout: str = '((0,1),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
     "pAll,layoutList,source =bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
     "show(pAll)"
@@ -72,19 +75,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def makeJScallback(widgetDict):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    code=\"\\\n",
-    "        var dataOrig = cdsOrig.data;  \\\n",
-    "        var dataSel  = cdsSel.data;  \"\n",
-    "    for iW in widgetDict:\n",
-    "        print(iW)\n",
-    "        #print(type(iW).__name__)\n",
+    "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
+    "    print(size)\n",
+    "    code=\"\"\"\n",
+    "        var dataOrig = cdsOrig.data;\n",
+    "        var dataSel = cdsSel.data;\n",
+    "        console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);          \n",
+    "        \"\"\"\n",
+    "    #code+=f\"var size={size}\"        \n",
+    "    \n",
+    "    codeSlider=\"\"\n",
+    "    for key, value in widgetDict.items():\n",
+    "        #print(key,value)\n",
+    "        #print(type(value).__name__)\n",
+    "        if type(value).__name__ == \"RangeSlider\":\n",
+    "            codeSlider+=f\"var {key}Value={key}.value\\n\"\n",
+    "            codeSlider+=f\"console.log(\\\"%s\\t%f\\t%f\\\",\\\"{key}\\\",{key}Value[0],{key}Value[1])\\n\"\n",
+    "            #codeSlider+=f\"isSelected&=(dataOrig[\\\"{key}\\\"])\\n\"\n",
+    "            #print(value)\n",
+    "    print(codeSlider)\n",
+    "    code+=codeSlider\n",
     "    callback = CustomJS(args=widgetDict, code=code)\n",
+    "    #print(callback)\n",
+    "    #display(widgetDict)\n",
     "    return callback\n",
     "\n",
     "def test_FigureArray():\n",
@@ -96,28 +115,39 @@
     "    figureArray = [\n",
     "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
     "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}],\n",
+    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}]\n",
     "    ]\n",
     "    figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
     "    tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
     "    dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
     "    # 2.) make CDS\n",
     "    cdsOrig = source\n",
-    "    cdsSel = copy.copy(source)\n",
+    "    cdsSel =  source\n",
     "    widgetDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel}\n",
     "    sliders=[]\n",
     "    # 3.) create sliders \n",
     "    for a in df.columns:\n",
     "        length=df[a].max()-df[a].min()\n",
-    "        sliderRange= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\".Range\")\n",
+    "        sliderRange= RangeSlider(start=df[a].min(), end=df[a].max(), value=(df[a].min(), df[a].max()), step=length*0.01, title=a+\"Range\")\n",
     "        sliders.append([sliderRange])\n",
-    "        widgetDict[a+\".Range\"]=sliderRange\n",
+    "        widgetDict[a+\"Range\"]=sliderRange\n",
     "    # make callback\n",
-    "    callback=makeJScallback(widgetDict)\n",
+    "    mycallback=makeJScallback(widgetDict)\n",
+    "    display(mycallback)\n",
     "    for a in sliders:\n",
-    "        figureList.append(a)    \n",
-    "    show(gridplotRow(figureList))\n",
-    "    #print(widgetDict)"
+    "        figureList.append(a)\n",
+    "        a[0].js_on_event('value',mycallback)\n",
+    "        a[0].js_on_change('value',mycallback)\n",
+    "        \n",
+    "    sliderRange2= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range2\")\n",
+    "    sliderRange2.js_on_change('value', mycallback)\n",
+    "    figureList.append([sliderRange2])\n",
+    "    pAll=    gridplotRow(figureList)\n",
+    "    show(pAll)\n",
+    "    return pAll\n",
+    "    #print(widgetDict)\n",
+    "    \n",
+    "figure=test_FigureArray() "
    ]
   },
   {
@@ -133,7 +163,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_FigureArray()"
+    "#from bokeh.layouts import column\n",
+    "#from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
+    "#from bokeh.plotting import figure, output_file, show\n",
+    "def makeJScallback2(widgetDict):\n",
+    "    #display(widgetDict[\"cdsOrig\"])\n",
+    "    code=\"\"\"  \n",
+    "        var origData = cdsOrig.data;\n",
+    "        var selData = cdsSel.data;\n",
+    "        var length=origData['A'].length\n",
+    "        console.log(\"Pos.: %f\\t%f\",slider0.value,slider1.value,sliderRange.value);\n",
+    "        console.log(\"Length: %f\",origData['A'].length,selData[\"A\"].length)\n",
+    "        console.log(\"El0: %f\",origData['A'][0])\n",
+    "        for (var i = 0; i < length; i++) {\n",
+    "            console.log(\"%f\\t%f\",origData['A'][i], selData['A'][i],)\n",
+    "        }\n",
+    "        \"\"\"\n",
+    "    \n",
+    "    callback = CustomJS(args=widgetDict, code=code)\n",
+    "    display(callback)\n",
+    "    return callback\n",
+    "\n",
+    " # 1.) create figures\n",
+    "figureArray = [\n",
+    "        [['A'], ['D+A','C-A'], {\"size\": 8}],\n",
+    "        [['A'], ['C+A', 'C-A']],\n",
+    "        [['A'], ['sin(A/10)', 'sin(A/20)*0.5', 'sin(A/40)*0.25'], {\"size\": 10}],\n",
+    "]\n",
+    "figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=800)'\n",
+    "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
+    "dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "# \n",
+    "cdsOrig=source\n",
+    "cdsSel=source\n",
+    "slider0 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider0\")\n",
+    "slider1 = Slider(start=0.1, end=4, value=1, step=.1, title=\"slider1\")\n",
+    "sliderRange= RangeSlider(start=0.1, end=4, value=(0.1,4) , step=0.1, title=\"Range\")\n",
+    "myDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel, \"slider0\":slider0, \"slider1\":slider1, \"sliderRange\":sliderRange}\n",
+    "\n",
+    "\n",
+    "callback=makeJScallback2(myDict)\n",
+    "#callback=makeJScallback(myDict) - callback form previous map OK\n",
+    "\n",
+    "slider0.js_on_change('value', callback)\n",
+    "slider1.js_on_change('value', callback)\n",
+    "sliderRange.js_on_change('value', callback)\n",
+    "layout = column(column(slider0,slider1,sliderRange),dummy)\n",
+    "\n",
+    "show(layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdsOrig.data[\"index\"].size"
    ]
   },
   {
