PWGPP-543 - bokeh standalone JScalback update

--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -20,7 +20,7 @@
     "from bokeh.layouts import column, row\n",
     "from bokeh.models import CustomJS, ColumnDataSource, Slider\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDraw import *\n",
-    "output_notebook()"
+    "output_notebook()\n"
    ]
   },
   {
@@ -82,25 +82,32 @@
    "source": [
     "def makeJScallback(widgetDict):\n",
     "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
-    "    print(size)\n",
-    "    code=\"\"\"\n",
-    "        var dataOrig = cdsOrig.data;\n",
-    "        var dataSel = cdsSel.data;\n",
-    "        console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);          \n",
-    "        \"\"\"\n",
-    "    #code+=f\"var size={size}\"        \n",
-    "    \n",
-    "    codeSlider=\"\"\n",
+    "    code=\\\n",
+    "    \"\"\"\n",
+    "    var dataOrig = cdsOrig.data;\n",
+    "    var dataSel = cdsSel.data;\n",
+    "    console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);  \n",
+    "    \"\"\"\n",
+    "    code+=f\"\"\"var arraySize={size};\\n\"\"\"\n",
+    "    code+=\"\"\"var nSelected=0;\\n\"\"\"\n",
+    "    code+=f\"\"\"for (var i = 0; i < {size}; i++)\\n\"\"\"\n",
+    "    code+=\" {\\n\"\n",
+    "    code+=\"\"\"var isSelected=1;\\n\"\"\"\n",
     "    for key, value in widgetDict.items():\n",
-    "        #print(key,value)\n",
-    "        #print(type(value).__name__)\n",
     "        if type(value).__name__ == \"RangeSlider\":\n",
-    "            codeSlider+=f\"var {key}Value={key}.value\\n\"\n",
-    "            codeSlider+=f\"console.log(\\\"%s\\t%f\\t%f\\\",\\\"{key}\\\",{key}Value[0],{key}Value[1])\\n\"\n",
-    "            #codeSlider+=f\"isSelected&=(dataOrig[\\\"{key}\\\"])\\n\"\n",
+    "            dataName=key.replace(\"Range\",\"\")\n",
+    "            code+=f\"      var {key}Value={key}.value;\\n\"\n",
+    "            code+=f\"      console.log(\\\"%s\\t%f\\t%f\\t%f\\\",\\\"{key}\\\",{key}Value[0],{key}Value[1],dataOrig[\\\"{dataName}\\\"][i]);\\n\"\n",
+    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]>={key}Value[0])\\n\"\n",
+    "            code+=f\"      isSelected&=(dataOrig[\\\"{dataName}\\\"][i]<={key}Value[1])\\n\"\n",
     "            #print(value)\n",
-    "    print(codeSlider)\n",
-    "    code+=codeSlider\n",
+    "    code+=\"\"\"      \n",
+    "        console.log(\\\"isSelected:%d\\t%d\\\",i,isSelected);\n",
+    "        if (isSelected) nSelected++;\n",
+    "    }                                          \n",
+    "    console.log(\\\"nSelected:%d\\\",nSelected);\n",
+    "    \"\"\"\n",
+    "    print(code)\n",
     "    callback = CustomJS(args=widgetDict, code=code)\n",
     "    #print(callback)\n",
     "    #display(widgetDict)\n",
