PWGPP-543 - bokeh standalone JScalback update

--- a/tutorial/bokehDraw/test_BokehClient.ipynb
+++ b/tutorial/bokehDraw/test_BokehClient.ipynb
@@ -80,14 +80,17 @@
    },
    "outputs": [],
    "source": [
+    "output_file(\"test2.html\")\n",
     "def makeJScallback(widgetDict):\n",
     "    size=widgetDict['cdsOrig'].data[\"index\"].size\n",
     "    code=\\\n",
     "    \"\"\"\n",
     "    var dataOrig = cdsOrig.data;\n",
     "    var dataSel = cdsSel.data;\n",
-    "    console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);  \n",
+    "    console.log('%f\\t%f\\t',dataOrig[\"A\"].length, dataSel[\"A\"].length);\n",
     "    \"\"\"\n",
+    "    for a in widgetDict['cdsOrig'].data:\n",
+    "        code+=f\"dataSel[\\'{a}\\']=[];\\n\"\n",
     "    code+=f\"\"\"var arraySize={size};\\n\"\"\"\n",
     "    code+=\"\"\"var nSelected=0;\\n\"\"\"\n",
     "    code+=f\"\"\"for (var i = 0; i < {size}; i++)\\n\"\"\"\n",
@@ -104,8 +107,15 @@
     "    code+=\"\"\"      \n",
     "        console.log(\\\"isSelected:%d\\t%d\\\",i,isSelected);\n",
     "        if (isSelected) nSelected++;\n",
-    "    }                                          \n",
-    "    console.log(\\\"nSelected:%d\\\",nSelected);\n",
+    "        if (isSelected){\n",
+    "    \"\"\"\n",
+    "    for a in widgetDict['cdsOrig'].data:\n",
+    "        code+=f\"dataSel[\\'{a}\\'].push(dataOrig[\\'{a}\\'][i]);\\n\"\n",
+    "    code+=\"\"\"\n",
+    "        }\n",
+    "    }\n",
+    "    console.log(\\\"nSelected:%d\\\",nSelected); \n",
+    "    cdsSel.change.emit();\n",
     "    \"\"\"\n",
     "    print(code)\n",
     "    callback = CustomJS(args=widgetDict, code=code)\n",
@@ -126,9 +136,11 @@
     "    ]\n",
     "    figureLayout: str = '((0,1, plot_height=200),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=150,plot_width=1000)'\n",
     "    tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
+    "    #dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
     "    dummy,source,figureList  = bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "\n",
     "    # 2.) make CDS\n",
-    "    cdsOrig = source\n",
+    "    cdsOrig = ColumnDataSource(df.query(\"A>0\"))\n",
     "    cdsSel =  source\n",
     "    widgetDict={\"cdsOrig\":cdsOrig, \"cdsSel\":cdsSel}\n",
     "    sliders=[]\n",
