Stand alone without interactivity

--- a/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
+++ b/tutorial/bokehDraw/bokehTreeDrawSA.ipynb
@@ -117,6 +117,7 @@
     "df=treeToPanda(tree,variables,\"1\",100000000,0,\".fElements\");\n",
     "#widgets=\"tab.first(slider.commonF(0,15,5,0,5)),tab.second(dropdown.MB(0,0.5,1)),accordion.first(slider.P0(0,1,0.5,0,1)),accordion.second(checkbox.isMax),slider.typeF(0,4,1,0)\"\n",
     "widgets=\"slider.commonF(0,15,5,0,5),slider.fraction(0,100,4,0,100)\"\n",
+    "#widgets=\"slider.commonF(0,15,5,0,5),slider.fraction(0,100,4,0,100),checkbox.P0(0),checkbox.P1(1),checkbox.isMax(True), checkbox.isMaxTot(false), checkbox.MB(), checkbox.pileUp()\"\n",
     "#widgets+=\"tab.options(checkbox.P0(0),checkbox.P1(1),checkbox.isMax(True), checkbox.isMaxTot(false), checkbox.MB(), checkbox.pileUp()))\"\n",
     "bokeh=bokehDrawSA(df.query(\"tailF>-1\"),\"tailF>-1\",\"tailF\",\"slope\",\"fraction\",widgets,p3,commonX=1,size=6,ncols=1, tooltips=tooltips)"
    ]
